# rag-params-finder

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .markdownlint.json  .pre-commit-config.yaml  .trivyignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  QUICKSTART.md  README.md  VERIFICATION_CHECKLIST.md  docker-compose.dev.yml  docker-compose.local-atlas.yml  docker-compose.yml  pyproject.toml  setup.sh  start-services.sh  stop-services.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  code-review-graph.yml  nightly.yml
cli/: api_client.py  config_loader.py  indexes_cmd.py  main.py
configs/: example-chunking-methods.yaml  example-full-sweep-local.yaml  example-full-sweep-voyage.yaml  example-kimchi.yaml  example-local.yaml  example-mongodb-local-bayesian.yaml  example-mongodb-local-parallel.yaml  example-mongodb-local.yaml  example-mongodb-sie-parallel.yaml  example-mongodb-sie.yaml  example-mongodb-unified-retrievers-bayesian.yaml  example-mongodb-unified-retrievers.yaml  example-mongodb-voyage-parallel.yaml  example-mongodb-voyage.yaml  example-retrieval-methods.yaml  example-voyage-ai.yaml  example-voyage-all-models.yaml  example.yaml  questions.example.json
docker/: frontend.Dockerfile  frontend.dev.Dockerfile  server.Dockerfile
docs/: ARCHITECTURE.md  DOC-GAPS.md  GRAPHITI-EXPORT-SLICE-1.md  PROGRESS.md  README.md  REFERENCE.md  codex-and-gpt5-development.md
docs/_internal/: DOC-GAPS.md  DOCS-CODE-AUDIT-FIXES.md  DOCS-CODE-AUDIT.md  GRAPHITI-EXPORT-SLICE-1.md  PROGRESS.md  TIEBREAKER-EXPLANATION-FEATURE.md
docs/adr/: ADR-001-two-process-architecture.md  ADR-002-voyage-and-local-providers.md  ADR-003-mongodb-atlas-vector-store.md
docs/contributor-guide/: architecture.md  development.md  extending.md  local-environment.md  release-process.md
docs/plan/: DECISIONS.md  GAP_ANALYSIS.md  HANDOFF.md  PRD-supabase-pgvector-migration.md  TRAIL.md  interview_summary.md
docs/plan/gate-evidence/: slice-14.json  slice-16.json  slice-18.json  slice-20.json  slice-21.json  slice-24.json  slice-25.json  slice-25B.json  slice-29.json  slice-39.json  slice-41A.json
docs/plan/slices/: PROGRESS.md  SLICE-01-SKATEBOARD.md  SLICE-03-SWEEP-EXPANSION.md  SLICE-04-LIVE-STATUS.md  SLICE-07-LOCAL-MODELS.md  SLICE-10-RUN-RECOVERY.md  SLICE-11-SEARCH-EXPLORER.md  SLICE-16-PARALLEL-SWEEP-RUNS.md  SLICE-18-UNIFIED-RETRIEVER-CONFIG.md  SLICE-20-TOOLCHAIN-HARDENING.md  SLICE-21-SIE-SKATEBOARD.md  SLICE-22-SIE-SCOOTER.md  SLICE-23-SIE-BICYCLE.md  SLICE-24-PORT-STANDARDISATION.md  SLICE-25-ATLAS-LOCAL.md  SLICE-26-LOCAL-MONGODB-DOCS.md  SLICE-27-MONGODB-MODE-INDICATOR.md  (+16 more)
docs/slices/: PROGRESS.md  SLICE-01-SKATEBOARD.md  SLICE-02-RERANK.md  SLICE-03-SWEEP-EXPANSION.md  SLICE-04-LIVE-STATUS.md  SLICE-05-PERSONA-QUERIES.md  SLICE-07-LOCAL-MODELS.md  SLICE-10-RUN-RECOVERY.md  SLICE-14-DOCKER-COMPOSE.md  SLICE-16-KIMCHI-PROVIDER.md  SLICE-16-PARALLEL-SWEEP-RUNS.md  SLICE-17-TEST-SUITE-EXPANSION.md  SLICE-18-UNIFIED-RETRIEVER-CONFIG.md  SLICE-19-STORAGE-QUOTA-GUARD.md  SLICE-20-TOOLCHAIN-HARDENING.md  SLICE-21-SIE-SKATEBOARD.md  SLICE-22-SIE-SCOOTER.md  SLICE-23-SIE-BICYCLE.md  SLICE-24-PORT-STANDARDISATION.md  SLICE-25-ATLAS-LOCAL.md  SLICE-25B-ATLAS-SWITCHING.md  SLICE-26-LOCAL-MONGODB-DOCS.md  SLICE-27-MONGODB-MODE-INDICATOR.md  SLICE-28-RESULTS-EXPORT.md  SLICE-29-PADDING-PROPAGATION.md  SLICE-31-EXPERIMENT-LIST-FILTER.md  SLICE-32-STORAGE-BACKEND-PROTOCOL.md  SLICE-33-POSTGRES-SCHEMA-CRUD.md  SLICE-34-POSTGRES-DENSE-RETRIEVAL.md  SLICE-35-POSTGRES-SPARSE-HYBRID.md  SLICE-36-POSTGRES-PREFLIGHT-STATS.md  SLICE-37-POSTGRES-LOCAL-CLOUD-PARITY.md  SLICE-38-CUTOVER-ADR-004.md  SLICE-39-DEMO-READY-DASHBOARD-POLISH.md  SLICE-41-DOCS-PLAN-SLICES-SSOT.md
docs/user-guide/: cli-reference.md  cloud-setup.md  configuration.md  dashboard-guide.md  getting-started.md  local-atlas-setup.md  mongodb-setup.md  sie-setup.md  troubleshooting.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  stryker.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  constants.ts  index.css  main.tsx
scripts/: aim-ui.sh  bump_version.py  check_integrity.py  create_github_releases.sh  docker-build-context.sh  docker-cleanup.sh  health-check.sh  install-git-hooks.sh  local-atlas.sh  pip-audit.sh  pre-push-gates.sh  push_tags_incrementally.sh  quality-gates.sh  release.sh  repo-lint.sh  security-scan.sh  strip_ai_coauthor.py  wait-experiment.sh
scripts/lib/: compose.sh
server/: main.py  settings.py
server/api/: experiments.py  experiments_shared.py  runs.py  sweep.py
server/core/: aim_logger.py  atlas_storage.py  data_loader.py  embedder.py  embedder_factory.py  executors.py  experiment_control.py  health_check.py  kimchi_embedder.py  local_embedder.py  local_reranker.py  model_registry.py  orchestrator.py  pdf_parser.py  query_loader.py  rate_limiter.py  reranker.py  results_analyzer.py  retriever.py  search_index_guard.py  search_index_plan.py  sie_embedder.py  sie_guard.py  startup_reconciliation.py  tavily_corpus.py
server/db/: atlas.py  indexes.py  mongodb_uri.py
server/models/: config.py  enums.py  results.py  status.py
server/utils/: log_throttle.py  logger.py  metadata.py  scope_log.py
tests/: test_cli_print_summary.py  test_config_examples.py  test_db_indexes.py  test_embedder_factory.py  test_embedder_provider_dispatch.py  test_expand_sweep.py  test_experiment_config_providers.py  test_experiment_control.py  test_experiments_api_bayesian.py  test_experiments_db_stats.py  test_health_check.py  test_kimchi_provider.py  test_local_embedder.py  test_model_registry_dimensions.py  test_mongodb_uri.py  test_orchestrator_retriever.py  test_padding.py  test_padding_propagation_api.py  test_retriever.py  test_retriever_vector_index.py  test_search_index_guard.py  test_search_index_plan.py  test_semantic_overlap.py  test_sie_embedder.py  test_sie_embedder_cancel.py  test_sie_guard.py  test_sie_settings.py  test_slice16_parallel_sweep.py  test_sweep_endpoint.py  test_tavily_corpus.py  test_tiebreaker_ranking.py
(+28 files in other folders)
