[project]
name = "rag-params-finder"
version = "0.11.0"
description = "RAG parameter sweep experimentation tool with MongoDB Atlas Vector Search and Voyage AI"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pymongo>=4.6.1",
    "voyageai>=0.2.3",
    "pypdf>=4.0.1",
    "langchain>=0.1.0",
    "langchain-text-splitters>=0.0.1",
    "tiktoken>=0.5.0",
    "nltk>=3.8.1",
    "pyyaml>=6.0.1",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "typer>=0.9.0",
    "httpx>=0.26.0",
    "rich>=13.7.0",
    "pymongo[srv]>=4.6.1",
    "sentence-transformers>=2.6.0,<6.0.0",
    "numpy>=1.26,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "types-PyYAML>=6.0.0",
    "pre-commit>=3.6.0",
    "pip-audit>=2.7.0",
    "bandit>=1.7.8",
]

[project.scripts]
rag-params-finder = "cli.main:app"

[tool.uv]
environments = [
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'linux'",
]
override-dependencies = [
    "urllib3>=2.7.0",
    "starlette>=1.0.1",
    "idna>=3.15",
    "langchain-core>=1.3.3",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cli*", "server*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "integration: tests requiring MongoDB Atlas or network (excluded by default)",
    "slow: tests taking >1s in isolation (excluded by default)",
]

[tool.coverage.run]
source = [
    "server/core/search_index_plan.py",
    "server/core/search_index_guard.py",
    "server/core/results_analyzer.py",
    "server/models/config.py",
]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80
precision = 1

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]

# Transitive ML stack (torch/transformers via sentence-transformers) — tracked; major upgrade deferred.
# Ignores are applied in scripts/pip-audit.sh (pip-audit has no pyproject config).

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
